Fixed icons align on the login page

--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -14,14 +14,18 @@ input{
     height: 100vh;
 }
 .atleta img{
-    height: 24px;
-    width: 24px;
+    height: 28px;
+    width: 28px;
 }
 .atleta, i {
-    padding: .6rem 0;
+    /* padding: .6rem 0; */
     background: #f4f4f4;
     min-width: 48px;
+    /* min-height: 60px; */
     border: 1px solid #ccc;
     line-height: 1px;
     border-right: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
